--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -51,13 +51,13 @@
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">CUSTOM-MADE</a><span class="menu-arrow"></span>
                     <ul class="submenu">
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">ART</a>
+                            <a href="javascript:void(0)" style="color: #6A1B9A !important;"  routerLink="/custome-made">ART</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">PRODUCT</a>
+                            <a href="javascript:void(0)"  style="color: #2E7D32!important;" routerLink="/">PRODUCT</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">SPACE DESIGNE</a>
+                            <a href="javascript:void(0)"  style="color: #00838F !important;" routerLink="/">SPACE DESIGNE</a>
                         </li>
                     </ul>
                 </li>
@@ -65,13 +65,13 @@
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">SERVICES</a><span class="menu-arrow"></span>
                     <ul class="submenu">
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">IMAGE CONSULTING</a>
+                            <a href="javascript:void(0)" style="color: #6A1B9A !important;"  routerLink="/">IMAGE CONSULTING</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">EXPERIENCE GURU</a>
+                            <a href="javascript:void(0)"  style="color: #2E7D32!important;"  routerLink="/">EXPERIENCE GURU</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">CREATIVE DIRECTION</a>
+                            <a href="javascript:void(0)"  style="color: #00838F !important;" routerLink="/">CREATIVE DIRECTION</a>
                         </li>
                     </ul>
                 </li>
@@ -79,16 +79,16 @@
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">SHOP</a><span class="menu-arrow"></span>
                     <ul class="submenu">
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">MATERSANT</a>
+                            <a href="javascript:void(0)" style="color: #6A1B9A !important;" routerLink="/">MATERSANT</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">MATERIA CURADA</a>
+                            <a href="javascript:void(0)" style="color: #2E7D32!important;"  routerLink="/">MATERIA CURADA</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">THE ISSUE</a>
+                            <a href="javascript:void(0)" style="color: #00838F !important;"  routerLink="/">THE ISSUE</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">ALL</a>
+                            <a href="javascript:void(0)" style="color: #D84315 !important;" routerLink="/">ALL</a>
                         </li>
                     </ul>
                 </li>
@@ -96,20 +96,20 @@
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">ARCHIVE</a><span class="menu-arrow"></span>
                     <ul class="submenu">
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">2018</a>
+                            <a href="javascript:void(0)" style="color: #6A1B9A !important;" routerLink="/">2018</a>   
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">2019</a>
+                            <a href="javascript:void(0)" style="color: #2E7D32!important;" routerLink="/">2019</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">2020</a>
+                            <a href="javascript:void(0)" style="color: #00838F !important;" routerLink="/">2020</a>
                         </li>
                         <li class="nav-link-ref">
-                            <a href="javascript:void(0)" routerLink="/">2021</a>
+                            <a href="javascript:void(0)" style="color: #D84315 !important;" routerLink="/">2021</a>
                         </li>
                     </ul>
                 </li>
-                <li><a routerLink="#" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a></li>
+                <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a></li>
             </ul>
             <!--end navigation menu-->
             <!-- <div class="buy-menu-btn d-none">
