--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -242,11 +242,37 @@
                 
                 </ul>
                  
-                <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">    
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" [ngxScrollTo]="'#1'" > Back</a>
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#3'" >Next <i
-                      class="uil uil-angle-right-b"></i></a>
+                <div class="row align-items-center">
+                  <div class="col-12">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <a class="text-dark align-items-center">
+                        <span class="pro-icons"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-left fea icon-sm">
+                            <line x1="19" y1="12" x2="5" y2="12"></line>
+                            <polyline points="12 19 5 12 12 5"></polyline>
+                          </svg></span>
+                        <span class="text-muted d-none d-md-inline-block" [ngxScrollTo]="'#1'" > Back</span>
+                        <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
+                          alt="">
+                      </a>
+
+                      <a class="text-dark align-items-center">
+                        <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
+                          alt="">
+                        <span class="text-muted d-none d-md-inline-block"[ngxScrollTo]="'#3'"> Next</span>
+                        <span class="pro-icons"><svg xmlns="" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                          </svg></span>
+                      </a>
+                    </div>
+                  </div>
+                  <!--end col-->
                 </div>
+                <!--end row-->
+
               </div>
             </div>
             <!--end col-->
@@ -328,11 +354,37 @@
                   <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                   
                 </ul>
-                <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" [ngxScrollTo]="'#2'" > Back</a>
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#4'">Next <i
-                      class="uil uil-angle-right-b"></i></a>
+                <div class="row align-items-center">
+                  <div class="col-12">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <a class="text-dark align-items-center">
+                        <span class="pro-icons"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-left fea icon-sm">
+                            <line x1="19" y1="12" x2="5" y2="12"></line>
+                            <polyline points="12 19 5 12 12 5"></polyline>
+                          </svg></span>
+                        <span class="text-muted d-none d-md-inline-block" [ngxScrollTo]="'#2'" > Back</span>
+                        <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
+                          alt="">
+                      </a>
+
+                      <a class="text-dark align-items-center">
+                        <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
+                          alt="">
+                        <span class="text-muted d-none d-md-inline-block"[ngxScrollTo]="'#4'"> Next </span>
+                        <span class="pro-icons"><svg xmlns="" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                          </svg></span>
+                      </a>
+                    </div>
+                  </div>
+                  <!--end col-->
                 </div>
+                <!--end row-->
+
               </div>
             </div>
             <!--end col-->
@@ -455,11 +507,37 @@
                   <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea>  
                   <br> -->
                 </ul>
-                <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" [ngxScrollTo]="'#3'" > Back</a>  
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#5'" >Next <i
-                      class="uil uil-angle-right-b"></i></a>
+                <div class="row align-items-center">
+                  <div class="col-12">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <a class="text-dark align-items-center">
+                        <span class="pro-icons"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-left fea icon-sm">
+                            <line x1="19" y1="12" x2="5" y2="12"></line>
+                            <polyline points="12 19 5 12 12 5"></polyline>
+                          </svg></span>
+                        <span class="text-muted d-none d-md-inline-block" [ngxScrollTo]="'#3'" > Back</span>
+                        <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
+                          alt="">
+                      </a>
+
+                      <a class="text-dark align-items-center">
+                        <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
+                          alt="">
+                        <span class="text-muted d-none d-md-inline-block"[ngxScrollTo]="'#5'"> Next </span>
+                        <span class="pro-icons"><svg xmlns="" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                          </svg></span>
+                      </a>
+                    </div>
+                  </div>
+                  <!--end col-->
                 </div>
+                <!--end row-->
+
               </div>
             </div>
             <!--end col-->
@@ -611,12 +689,37 @@
                   <textarea rows="1" cols="80" class="form-control" placeholder=""></textarea> -->
                 
                 </ul>
-                
-                <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" [ngxScrollTo]="'#4'" > Back</a>
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#6'" >Next <i
-                      class="uil uil-angle-right-b"></i></a>
+                <div class="row align-items-center">
+                  <div class="col-12">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <a class="text-dark align-items-center">
+                        <span class="pro-icons"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-left fea icon-sm">
+                            <line x1="19" y1="12" x2="5" y2="12"></line>
+                            <polyline points="12 19 5 12 12 5"></polyline>
+                          </svg></span>
+                        <span class="text-muted d-none d-md-inline-block" [ngxScrollTo]="'#4'" > Back</span>
+                        <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
+                          alt="">
+                      </a>
+
+                      <a class="text-dark align-items-center">
+                        <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
+                          alt="">
+                        <span class="text-muted d-none d-md-inline-block"[ngxScrollTo]="'#6'"> Next </span>
+                        <span class="pro-icons"><svg xmlns="" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                          </svg></span>
+                      </a>
+                    </div>
+                  </div>
+                  <!--end col-->
                 </div>
+                <!--end row-->
+
               </div>
             </div>
             <!--end col-->
@@ -687,11 +790,37 @@
                   <br>
             
                 </ul>
-                <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" [ngxScrollTo]="'#5'" > Back</a>
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#7'" >Next <i
-                      class="uil uil-angle-right-b"></i></a>
+                <div class="row align-items-center">
+                  <div class="col-12">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <a class="text-dark align-items-center">
+                        <span class="pro-icons"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-left fea icon-sm">
+                            <line x1="19" y1="12" x2="5" y2="12"></line>
+                            <polyline points="12 19 5 12 12 5"></polyline>
+                          </svg></span>
+                        <span class="text-muted d-none d-md-inline-block" [ngxScrollTo]="'#5'" > Back</span>
+                        <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
+                          alt="">
+                      </a>
+
+                      <a class="text-dark align-items-center">
+                        <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
+                          alt="">
+                        <span class="text-muted d-none d-md-inline-block"[ngxScrollTo]="'#7'"> Next</span>
+                        <span class="pro-icons"><svg xmlns="" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                          </svg></span>
+                      </a>
+                    </div>
+                  </div>
+                  <!--end col-->
                 </div>
+                <!--end row-->
+
               </div>
             </div>
             <!--end col-->
@@ -758,11 +887,37 @@
                 <textarea rows="2" cols="80" class="form-control" placeholder=""></textarea>
             
                 </ul>
-                <div class="mt-4" data-aos="fade-up" data-aos-duration="2200">
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" [ngxScrollTo]="'#6'" > Back</a>
-                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#8'"> SUBMIT FORM <i
-                      class="uil uil-angle-right-b"></i></a>
+                <div class="row align-items-center">
+                  <div class="col-12">
+                    <div class="d-flex align-items-center justify-content-between">
+                      <a class="text-dark align-items-center">
+                        <span class="pro-icons"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-left fea icon-sm">
+                            <line x1="19" y1="12" x2="5" y2="12"></line>
+                            <polyline points="12 19 5 12 12 5"></polyline>
+                          </svg></span>
+                        <span class="text-muted d-none d-md-inline-block" [ngxScrollTo]="'#6'" > Back</span>
+                        <img src="" class="avatar avatar-small rounded shadow ms-2" style="height:auto;"
+                          alt="">
+                      </a>
+
+                      <a class="text-dark align-items-center">
+                        <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
+                          alt="">
+                        <span class="text-muted d-none d-md-inline-block"[ngxScrollTo]="'#8'"> SUBMIT FORM </span>
+                        <span class="pro-icons"><svg xmlns="" width="24" height="24"
+                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                            stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
+                            <line x1="5" y1="12" x2="19" y2="12"></line>
+                            <polyline points="12 5 19 12 12 19"></polyline>
+                          </svg></span>
+                      </a>
+                    </div>
+                  </div>
+                  <!--end col-->
                 </div>
+                <!--end row-->
+
               </div>
             </div>
             <!--end col-->
@@ -824,11 +979,11 @@
                 <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">
                   Thank you for submitting your MATERSANT custom art form. We’ll get back to you as soon as possible. 🐉
                   In the meantime, take a look at the cool stuff we have in our shop.</h4>
+
                 
                    
+                   
                 <ul data-aos="fade-up" data-aos-duration="1800">
- 
-                  
                 </ul>
                 
               </div>
