--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -92,6 +92,8 @@
                         </li>
                     </ul>
                 </li>
+
+                
                 <li class="has-submenu">
                     <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Thin' !important;">ARCHIVE</a><span class="menu-arrow"></span>
                     <ul class="submenu">
@@ -109,7 +111,8 @@
                         </li>
                     </ul>
                 </li>
-                <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a></li>
+                
+                <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
             </ul>
             <!--end navigation menu-->
             <!-- <div class="buy-menu-btn d-none">
