--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -49,10 +49,7 @@
           <li class="has-submenu" [ngClass]="{'active':currentSection === '7'}">
             <a href="javascript: void(0);" [ngxScrollTo]="'#7'"></a>
           </li>
-          <li class="has-submenu" [ngClass]="{'active':currentSection === '8'}">
-            <a href="javascript: void(0);" [ngxScrollTo]="'#8'"></a>
-          </li>
-          
+         
         </ul>
         <!--end navigation menu-->
       </div>
@@ -150,7 +147,7 @@
                   <br>
                   <input   class="form-check-input" type="checkbox" ng-model="2c" for="flexCheckDefault">Digital 
                   <br>
-                  <input   class="form-check-input" type="checkbox" ng-model="2d" for="flexCheckDefault">>Sculpture
+                  <input   class="form-check-input" type="checkbox" ng-model="2d" for="flexCheckDefault">Sculpture
                   <br>
                   <input   class="form-check-input" type="checkbox" ng-model="2e" for="flexCheckDefault">Photography
                   <br>
@@ -194,7 +191,7 @@
                 
 
               </div>
-              <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2a.What size are you thinking for this illustration? </p>
+              <!--<p class="text-muted" data-aos="fade-up" data-aos-duration="1400">2a.What size are you thinking for this illustration? </p>
                   <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                   <label class="form-check-label" for="flexCheckDefault"> Small (A4: 21 x 29.7 cm)</label>
                   <br>
@@ -438,7 +435,7 @@
                 <!--end row-->
 
               </div>
-              <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">4a. Outdoors can mean many things, so for us it’s important to know about the elements that will interact with the custom artwork.
+             <!-- <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">4a. Outdoors can mean many things, so for us it’s important to know about the elements that will interact with the custom artwork.
                 Check all that apply:  </p>
               <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
               <label class="form-check-label" for="flexCheckDefault"> Exposure to direct sunlight</label>
@@ -491,7 +488,7 @@
         <!--end container-->
       </div>
 
-           <!-- home Start -->
+       
     
            <!-- home Start -->
     <section class="section pb-0" id="5">
@@ -571,9 +568,12 @@
       </div>
   
 
+
+      
+    
            <!-- home Start -->
-         <section  *ngIf="" class="section pb-0" id="6">
-       <div style="background-color: #FAFCAF ;width:1920px; height:1020px;">
+    <section class="section pb-0" id="6">
+      <div style="background-color:#FAFCAF   ;width:1920px; height:1020px;">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-12 text-center">
@@ -593,8 +593,7 @@
         
             </div>
             <!--end col-->
-    
-            <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
+               <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
               <div class="section-title ms-lg-5">
                 <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">CUSTOM MADE -ART-</h4>
                 <p class="text-muted" data-aos="fade-up" data-aos-duration="1400">6.Anything else you may want to add? </p>
@@ -603,6 +602,8 @@
                 
                 <span class="text-primary h5 me-2"></span>Other:
                 <textarea rows="2" cols="80" class="form-control" placeholder=""></textarea>
+            
+
             
                 </ul>
                 <div class="row align-items-center">
@@ -622,7 +623,7 @@
                       <a class="text-dark align-items-center">
                         <img src="" class="avatar avatar-small rounded shadow me-2" style="height:auto;"
                           alt="">
-                          <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#7'">SUBMIT FORM </a>
+                          <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"[ngxScrollTo]="'#7'">Next </a>
                         <span class="pro-icons"><svg xmlns="" width="24" height="24"
                             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                             stroke-linejoin="round" class="feather feather-arrow-right fea icon-sm">
@@ -644,8 +645,8 @@
        
         <!--end container-->
       </div>
+  
     
-        
     
      <!-- home Start -->
      <section class="section pb-0" id="7">
@@ -692,3 +693,5 @@
       </div>
     
      
+
+
