--- a/src/app/core/components/aboutus-two/aboutus-two.component.html
+++ b/src/app/core/components/aboutus-two/aboutus-two.component.html
@@ -10,8 +10,8 @@
             <div class="page-next">
               <nav aria-label="breadcrumb" class="d-inline-block">
                 <ul class="breadcrumb bg-white rounded shadow mb-0">
-                  <li class="breadcrumb-item"><a routerLink="/home">Matersant</a></li>
-
+                  <li class="breadcrumb-item"> <a href="https://matersant.ima.com.gt/">Matersant</a></li>
+                  <li class="breadcrumb-item"><a href="https://materia.ima.com.gt/" >Materia Curada</a></li>
                   <li class="breadcrumb-item active" aria-current="page">About us</li>
                 </ul>
               </nav>
